--- a/topografiya/templates/leader/edit_pdowork.html
+++ b/topografiya/templates/leader/edit_pdowork.html
@@ -406,7 +406,7 @@
                                                                             </div>
 
                                                                             <input type="text" name="pdowork" value="{{ pdowork.id }}" style="display: none">
-                                                                            <input type="text" name="worker_id" value="{{ user.profile.id }}" style="display: none">
+                                                                            <input type="text" name="worker_id" value="{{ user.profile.full_name }}" style="display: none">
                                                                             <input type="text" name="object_id" value="{{ object.id }}" style="display: none">
 
                                                                             <hr>
